# eaicockpit

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  plan.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: __init__.py  cli.py  config.py  graph.py  main.py  models.py  pipeline.py  scanner.py  watcher.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/api/: client.js
frontend/src/camera/: controls.js
frontend/src/fx/: bloom.js
frontend/src/graph/: renderer.js
frontend/src/levels/: navigation.js
frontend/src/panel/: detail.js
frontend/src/state/: store.js
frontend/src/styles/: global.css  hud.css
frontend/src/ui/: credits.js  hud.js  onboarding.js  settings.js
tests/backend/: test_api.py  test_config.py  test_pipeline.py  test_scanner.py
tests/perf/: stress_500.html
