[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eaicockpit"
version = "0.1.0"
description = "Visualizador 3D de projetos Claude Code — estilo HUD do Jarvis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "eAI Academy", email = "contato@eaiacademy.com" }]
keywords = ["claude-code", "3d", "visualization", "fastapi", "threejs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "watchdog>=4.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "click>=8.1.0",
]

[project.scripts]
eaicockpit = "backend.cli:cli"

[project.urls]
Homepage = "https://github.com/eai-academy/eaicockpit"
Repository = "https://github.com/eai-academy/eaicockpit"
Issues = "https://github.com/eai-academy/eaicockpit/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
